--- a/data-entry-opt/Account Settings.html
+++ b/data-entry-opt/Account Settings.html
@@ -77,7 +77,7 @@
 			<div class="sidebar-scroll">
 				<nav>
 					<ul class="nav">
-						<li><a href="Admin login/assets/Dashboard.html" class="active"><i class="lnr lnr-home"></i> <span>Dashboard</span></a></li>
+						<li><a href="Dashboard.html" class="active"><i class="lnr lnr-home"></i> <span>Dashboard</span></a></li>
 						<li><a href="Manage.html" class="dropdown-toggle" data-toggle="dropdown"><i class="lnr lnr-chevron-down"></i> <span>Manage User Account Details</span></a>
 
 							<ul class="dropdown-menu">
