--- a/data-entry-opt/Dashboard.html
+++ b/data-entry-opt/Dashboard.html
@@ -47,11 +47,11 @@
 
 								<li><a href="#" class="notification-item"><span class="dot bg-danger"></span>You have 3 unfinished tasks</a></li>
 
-								<li><a href="#" class="more">See all notifications</a></li>
+								<!-- <li><a href="#" class="more">See all notifications</a></li> -->
 							</ul>
 						</li>
 						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="lnr lnr-question-circle"></i> <span>Help</span> <i class="icon-submenu lnr lnr-chevron-down"></i></a>
+							<!-- <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="lnr lnr-question-circle"></i> <span>Help</span> <i class="icon-submenu lnr lnr-chevron-down"></i></a> -->
 							<ul class="dropdown-menu">
 
 								<li><a href="#">Security</a></li>
@@ -62,8 +62,6 @@
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png" class="img-circle" alt="Avatar"> <span>Admin</span> <i class="icon-submenu lnr lnr-chevron-down"></i></a>
 							<ul class="dropdown-menu">
 								<li><a href="#"><i class="lnr lnr-user"></i> <span>My Profile</span></a></li>
-								<li><a href="#"><i class="lnr lnr-envelope"></i> <span>Messages</span></a></li>
-								<li><a href="#"><i class="lnr lnr-cog"></i> <span>Settings</span></a></li>
 								<li><a href="#"><i class="lnr lnr-exit"></i> <span>Logout</span></a></li>
 							</ul>
 						</li>
@@ -78,7 +76,7 @@
 				<nav>
 					<ul class="nav">
 						<li><a href="Dashboard.html" class="active"><i class="lnr lnr-home"></i> <span>Dashboard</span></a></li>
-						<li><a href="Manage.html" class="dropdown-toggle" data-toggle="dropdown"><i class="lnr lnr-chevron-down"></i> <span>Manage User Account Details</span></a>
+						<li><a href="Manage.html" class="dropdown-toggle" data-toggle="dropdown"><i class="lnr lnr-chevron-down"></i> <span>Manage User Account Information</span></a>
 
 							<ul class="dropdown-menu">
 
@@ -117,8 +115,8 @@
 									<div class="metric">
 										<span class="icon"><i class="fa fa-clipboard"></i></span>
 										<p>
-											<span class="number">1,252</span>
-											<span class="title">Total Number of Results Published</span>
+											<span class="number">10</span>
+											<span class="title">Total Number of Subjects </span>
 										</p>
 									</div>
 								</div>
@@ -126,8 +124,8 @@
 									<div class="metric">
 										<span class="icon"><i class="fa fa-eye"></i></span>
 										<p>
-											<span class="number">203</span>
-											<span class="title">Total Number of Exams Conducted</span>
+											<span class="number">600</span>
+											<span class="title">Total Number of Students</span>
 										</p>
 									</div>
 								</div>
@@ -135,26 +133,8 @@
 									<div class="metric">
 										<span class="icon"><i class="fa fa-child"></i></span>
 										<p>
-											<span class="number">4200</span>
-											<span class="title">Total Number of Students Enrolled</span>
-										</p>
-									</div>
-								</div>
-								<div class="col-md-3">
-									<div class="metric">
-										<span class="icon"><i class="fa fa-book"></i></span>
-										<p>
-											<span class="number">45</span>
-											<span class="title">Total Number of Subjects </span>
-										</p>
-									</div>
-								</div>
-								<div class="col-md-3">
-									<div class="metric">
-										<span class="icon"><i class="fa fa-table"></i></span>
-										<p>
-											<span class="number">62</span>
-											<span class="title">Total Number of Classes </span>
+											<span class="number">6</span>
+											<span class="title">Total Number of Classes</span>
 										</p>
 									</div>
 								</div>
@@ -181,7 +161,7 @@
 											</label>
 											<p>
 												<span class="title">Change Password</span>
-												<span class="short-description">Student with enrollment number 19801032021 applied for password change.</span>
+												<span class="short-description">Student with enrollment number 19801032021 applied for subject.</span>
 												<span class="date">Sep 30,2021</span>
 											</p>
 											<div class="controls">
@@ -194,7 +174,7 @@
 											</label>
 											<p>
 												<span class="title">Enable Account</span>
-												<span class="short-description">Marks entry clerk with Id 2454 applied for enable account option.</span>
+												<span class="short-description">Marks entry clerk with Id 2454 applied for email change.</span>
 												<span class="date">Oct 02,2021</span></span>
 											</p>
 											<div class="controls">
@@ -207,7 +187,7 @@
 											</label>
 											<p>
 												<strong>Disable Account</strong>
-												<span class="short-description">Need to disable account of Student with enrollment number 93701032020 who is no longer a part of the university.</span>
+												<span class="short-description">Delete subject workshop from IT-1 class.</span>
 												<span class="date">Oct 05,2021</span>
 											</p>
 											<div class="controls">
@@ -233,25 +213,17 @@
 									<ul class="list-unstyled activity-list">
 										<li>
 											<img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png"  alt="Avatar" class="img-circle pull-left avatar">
-											<p><a href="#">Admin</a> has changed the account password of Data Enty Operator Id 8457  <span class="timestamp">20 minutes ago</span></p>
+											<p><a href="#">Data entry operator</a> has changed the phone number of Data Enty Operator Id 8457  <span class="timestamp">20 minutes ago</span></p>
 										</li>
 										<li>
 											<img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png"  alt="Avatar" class="img-circle pull-left avatar">
-											<p><a href="#">Admin</a> has enabled the account of Data Entry Operator Id 8457<span class="timestamp">30 minutes ago</span></p>
+											<p><a href="#">Data entry operator</a> has added class Mech-2. <span class="timestamp">30 minutes ago</span></p>
 										</li>
 										<li>
 											<img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png"  alt="Avatar" class="img-circle pull-left avatar">
-											<p><a href="#">Admin</a> has created a new account under the student's section <span class="timestamp">Yesterday</span></p>
+											<p><a href="#">Data entry operator</a> has changed class of student ID-02101030220 <span class="timestamp">Yesterday</span></p>
 										</li>
-										<li>
-											<img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png"  alt="Avatar" class="img-circle pull-left avatar">
-											<p><a href="#">Admin</a> has done data duplication check <span class="timestamp">2 days ago</span></p>
-										</li>
-										<li>
-											<img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png"  alt="Avatar" class="img-circle pull-left avatar">
-											<p><a href="#">Admin</a> has changed the account username of Coordinator Id 35466<span class="timestamp">2 days ago</span></p>
-										</li>
-									</ul>
+																</ul>
 									<button type="button" class="btn btn-primary btn-bottom center-block">Load More</button>
 								</div>
 							</div>
@@ -272,7 +244,7 @@
 								<div class="panel-body">
 									<ul class="list-unstyled task-list">
 										<li>
-											<p>Updating Users Settings <span class="label-percent">23%</span></p>
+											<p>Updating Coordinators personal information <span class="label-percent">23%</span></p>
 											<div class="progress progress-xs">
 												<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="23" aria-valuemin="0" aria-valuemax="100" style="width:23%">
 													<span class="sr-only">23% Complete</span>
@@ -289,7 +261,7 @@
 											</div>
 										</li>
 										<li>
-											<p>Server Check <span class="label-percent">45%</span></p>
+											<p>Making student list for Mech-1 <span class="label-percent">45%</span></p>
 											<div class="progress progress-xs">
 												<div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
 													<span class="sr-only">45% Complete</span>
