--- a/student login/index.html
+++ b/student login/index.html
@@ -128,7 +128,7 @@
 			  <h3 class="mb-0"><i class="" style="size: 40px;"></i>STUDENT PROFILE</h3>
 			</div>
 			<div class="card-body pt-0" style="size: 70px;">
-			  <table class="table table-bordered">
+			  <table class="table table-bordered" style="border-width: thick;">
 				<tr>
 				  <th width="30%">Roll</th>
 				  <td width="2%">:</td>
