--- a/student login/marksh.html
+++ b/student login/marksh.html
@@ -115,7 +115,7 @@
                 </form>	
        
                     <div class="panel-body">
-                        <table class="table table-bordered">
+                        <table class="table table-bordered" style="border-width: thick;">
                             <thead>
                                 <tr>
                                     <th>S.No.</th>
