--- a/student login/examr.html
+++ b/student login/examr.html
@@ -116,7 +116,7 @@
                 </form>	
        
                     <div class="panel-body">
-                        <table class="table table-bordered">
+                        <table class="table table-bordered" style="border-width: thick;">
                             <thead>
                                 <tr>
                                     <th>S.No.</th>
