--- a/student login/index.html
+++ b/student login/index.html
@@ -177,7 +177,7 @@
 			<div class="card-header bg-transparent border-0">
 			  <h3 class="mb-0"><i class=""></i>CONTACT DETAILS</h3>
 			  <div class="card-body pt-0" style="size: 40px;">
-				<table class="table table-bordered">
+				<table class="table table-bordered" style="border-width: thick;">
 				  <tr>
 					<th width="50%">Mobile No.</th>
 					<td width="2%">:</td>
