--- a/main-pg/main-page.html
+++ b/main-pg/main-page.html
@@ -35,14 +35,12 @@
               <ul class="navbar-nav ml-auto">
 
                 <li class="nav-item">
-                  <a class="nav-link" href="#footer">Main Website</a>
+                  <a class="nav-link" href="https://www.igdtuw.ac.in/">Main Website</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#pricing">Technical Support</a>
+                  <a class="nav-link" href="https://www.igdtuw.ac.in/">Technical Support</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href=#cta"">Admin Department</a>
-                </li>
+        
             </div>
             </ul>
           </div>
@@ -56,7 +54,7 @@
       <h3>
         <div class="login ">
           <div class="login-heading">
-            Sign In Admin
+            Admin
           </div>
       </h3>
 
@@ -64,7 +62,7 @@
         <form>
           <div class="form-group">
             <label for="exampleInputEmail1">Username</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" required="*Required">
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Username" required="*Required">
             <!-- <small id="emailHelp" class="message form-text text-muted">We'll never share your email with anyone else.</small> -->
           </div>
           <div class="form-group">
@@ -75,7 +73,7 @@
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
             <label class="form-check-label" for="exampleCheck1">Check me out</label>
           </div>
-          <button type="submit" class="btn btn-dark">Submit</button>
+          <button type="submit" class="btn btn-dark">Log In</button>
         </form>
       </div>
     </div>
@@ -85,14 +83,14 @@
       <h3>
         <div class="login ">
           <div class="login-heading">
-            Sign In Student
+            Student
           </div>
       </h3>
       <div class="inputs container-fluid">
         <form>
           <div class="form-group">
             <label for="exampleInputEmail1">Username</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" required="*Required">
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Username" required="*Required">
             <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
           </div>
           <div class="form-group">
@@ -103,7 +101,7 @@
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
             <label class="form-check-label" for="exampleCheck1">Check me out</label>
           </div>
-          <button type="submit" class="btn btn-dark">Submit</button>
+          <button type="submit" class="btn btn-dark">Log In</button>
         </form>
       </div>
     </div>
