--- a/Admin login/Admin login/class-list.html
+++ b/Admin login/Admin login/class-list.html
@@ -78,15 +78,18 @@
 		<div id="sidebar-nav" class="sidebar">
 			<div class="sidebar-scroll">
 			<nav>
-					<ul class="nav">
-						<li><a href="Dashboard.html" class=""><i class="lnr lnr-home"></i> <span>Dashboard</span></a></li>
+				s	<ul class="nav">
+					<li><a href="Dashboard.html" class=""><i class="lnr lnr-home"></i> <span>Dashboard</span></a></li>
+					<!-- <li><a href="Manage.html" class="dropdown-toggle" data-toggle="dropdown"><i class="lnr lnr-chevron-down"></i> <span>Manage User Account Details</span></a>
 
-						<li><a href="data-entry-opt-list.html" class=""><i class="fa fa-database"></i> <span>Data Entry Operator Data</span></a></li>
-						<li><a href="marks-entry-clerk-list.html" class=""><i class="fa fa-list"></i> <span>Marks Entry Clerk Data</span></a></li>
-						<li><a href="coordinator-list.html" class=""><i class="fa fa-download"></i> <span>Coordinator Data</span></a></li>
-						<li><a href="list-of-class.html" class="active"><i class="fa fa-child"></i> <span>Student Data</span></a></li>
-						<li><a href="list-of-exams.html" class=""><i class="fas fa-book-open"></i><span>Exam Data</span></a></li>
-						<li><a href="list-of-subjects.html" class=""><i class="fas fa-atom"></i> <span>Subject Data</span></a></li>
+						<ul class="dropdown-menu"> -->
+
+
+							<li><a href="Data entry operator.html" class=""><i class="fa fa-database"></i> <span>Data Entry Operator</span></a></li>
+							<li><a href="Marks entry clerk.html" class=""><i class="fa fa-list"></i> <span>Marks Entry Clerk</span></a></li>
+							<li><a href="Coordinator.html" class=""><i class="fa fa-download"></i> <span>Coordinator</span></a></li>
+							<li><a href="class-list.html" class="active"><i class="fa fa-child"></i> <span>Student</span></a></li>
+
 
 						<li><a href="Account Settings.html" class=""><i class="lnr lnr-cog"></i> <span>Account Settings</span></a></li>
 
