--- a/MEO/MEO/list-of-class.html
+++ b/MEO/MEO/list-of-class.html
@@ -81,12 +81,12 @@
 					<ul class="nav">
 						<li><a href="Dashboard.html" class=""><i class="lnr lnr-home"></i> <span>Dashboard</span></a></li>
 
-						<li><a href="data-entry-opt-list.html" class=""><i class="fa fa-database"></i> <span>Data Entry Operator Data</span></a></li>
+						<!-- <li><a href="data-entry-opt-list.html" class=""><i class="fa fa-database"></i> <span>Data Entry Operator Data</span></a></li>
 						<li><a href="marks-entry-clerk-list.html" class=""><i class="fa fa-list"></i> <span>Marks Entry Clerk Data</span></a></li>
 						<li><a href="coordinator-list.html" class=""><i class="fa fa-download"></i> <span>Coordinator Data</span></a></li>
-						<li><a href="list-of-class.html" class="active"><i class="fa fa-child"></i> <span>Student Data</span></a></li>
-						<li><a href="list-of-exams.html" class=""><i class="fas fa-book-open"></i><span>Exam Data</span></a></li>
-						<li><a href="list-of-subjects.html" class=""><i class="fas fa-atom"></i> <span>Subject Data</span></a></li>
+						<li><a href="list-of-class.html" class="active"><i class="fa fa-child"></i> <span>Student Data</span></a></li> -->
+						<!-- <li><a href="list-of-exams.html" class=""><i class="fas fa-book-open"></i><span>Exam Data</span></a></li> -->
+						<li><a href="marks.html" class="active"><i class="fa fa-child"></i> <span>Student</span></a></li>
 
 						<li><a href="Account Settings.html" class=""><i class="lnr lnr-cog"></i> <span>Account Settings</span></a></li>
 
