--- a/MEO/MEO/list-of-class.html
+++ b/MEO/MEO/list-of-class.html
@@ -88,7 +88,7 @@
 						<!-- <li><a href="list-of-exams.html" class=""><i class="fas fa-book-open"></i><span>Exam Data</span></a></li> -->
 						<li><a href="marks.html" class="active"><i class="fa fa-child"></i> <span>Student</span></a></li>
 
-						<li><a href="Account Settings.html" class=""><i class="lnr lnr-cog"></i> <span>Account Settings</span></a></li>
+						<li><a href="account-settings.html" class=""><i class="lnr lnr-cog"></i> <span>Account Settings</span></a></li>
 
 
 					</ul>
